<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <include layout="@layout/activity_preferences"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20pt"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/TV1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_TV"
                android:textSize="12pt"
                android:textColor="@color/design_default_color_background"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/TV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_TV"
                android:textSize="12pt"
                android:textColor="@color/design_default_color_background"/>
        </LinearLayout>

        <Space
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/TV3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_TV"
                android:textSize="12pt"
                android:textColor="@color/design_default_color_background"
                android:layout_marginTop="12pt"
                android:layout_marginBottom="12pt"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/scrollzone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <Space
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/TV5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_TV"
                android:textSize="12pt"
                android:textColor="@color/design_default_color_background"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/TV6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_TV"
                android:textSize="12pt"
                android:textColor="@color/design_default_color_background"/>
        </LinearLayout>

        <Space
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_toggle_button"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/material_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Space
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_at_boot"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="10pt"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/material_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pref_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/toggle_preferences"
            android:layout_marginTop="20pt"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>